# lunchable

./: .gitignore  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  .releaserc.yaml  Dockerfile  LICENSE  README.md  TODO.md  _package_python.py  cli.html  codecov.yaml  contributing.html  docker-compose.yaml  genindex.html  index.html  lunchable.html  mkdocs.yaml  objects.inv  openapi.yaml  openapitools.json  package-lock.json  package.json  plugins.html  pushlunch.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  splitlunch.html  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml  flake8-problem-matcher.json  labels.yaml  release-drafter.yml
.github/config/: .eslintrc.js  release_draft_config.yml  yamllint.yml
.github/helpers/: version_check.py
.github/linters/: yamllint.yml
.github/matchers/: mypy.json  python.json
.github/workflows/: docker.yaml  docs.yaml  documentation.yml  generator.yaml  gha_test.yaml  labeler.yaml  lint.yaml  lint.yml  publish.yaml  publish.yml  pytest.yml  release.yaml  release.yml  reviewdog.yml  tests.yaml  tests.yml  tmate.yaml
_modules/: index.html
_modules/lunchable/: exceptions.html
_modules/lunchable/models/: _lunchmoney.html  assets.html  budgets.html  categories.html  crypto.html  plaid_accounts.html  recurring_expenses.html  tags.html  transactions.html
_sources/: contributing.md.txt  index.rst.txt  lunchable.rst.txt  pushlunch.rst.txt
_sources/api/: lunchable.plugins.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: lunchable.html  lunchable.models.html  lunchable.plugins.html  lunchable.plugins.pushlunch.html  lunchable.plugins.splitlunch.html  modules.html
clients/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
clients/python/.openapi-generator/: FILES
clients/python/docs/: AccountTypeEnum.md  CategoriesApi.md  CategoryObject.md  CreateCategoryRequestObjectChildrenInner.md  CreateNewTransactions201Response.md  CreateNewTransactionsRequest.md  CurrencyEnum.md  DeleteCategoryResponseWithDependenciesDependents.md  DeleteTagResponseWithDependenciesDependents.md  DeleteTransactionsRequest.md  ErrorResponseObject.md  GetAllCategories200Response.md  GetAllManualAccounts200Response.md  GetAllPlaidAccounts200Response.md  GetAllRecurring200Response.md  GetAllTags200Response.md  GetAllTransactions200Response.md  GroupTransactions201Response.md  GroupTransactionsRequest.md  InsertTransactionObjectAmount.md  ManualAccountObject.md  ManualAccountsApi.md  MeApi.md  PlaidAccountObject.md  PlaidAccountsApi.md  RecurringApi.md  RecurringObject.md  RecurringObjectMatches.md  RecurringObjectMatchesFoundTransactionsInner.md  RecurringObjectOverrides.md  RecurringObjectTransactionCriteria.md  SplitTransactionObjectAmount.md  SplitTransactionRequest.md  TagObject.md  TagsApi.md  TransactionObject.md  TransactionsApi.md  TransactionsBulkApi.md  TransactionsGroupApi.md  TransactionsSplitApi.md  (+1 more)
clients/python/lunchable/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/python/test/: test_account_type_enum.py  test_categories_api.py  test_category_object.py  test_create_category_request_object_children_inner.py  test_create_new_transactions201_response.py  test_create_new_transactions_request.py  test_currency_enum.py  test_delete_category_response_with_dependencies_dependents.py  test_delete_tag_response_with_dependencies_dependents.py  test_delete_transactions_request.py  test_error_response_object.py  test_get_all_categories200_response.py  test_get_all_manual_accounts200_response.py  test_get_all_plaid_accounts200_response.py  test_get_all_recurring200_response.py  test_me_api.py  (+25 more)
docs/: Makefile  README.md  cli.md  contributing.md  gen_pages.py  interacting.md  plugins.md  requirements.txt  usage.md
docs/plugins/: index.md  primelunch.md  pushlunch.md  splitlunch.md
docs/source/: api.rst  cli.md  cli.rst  conf.py  contributing.md  index.md  index.rst  lunchmoney.rst  models.rst  objects.rst  plugins.rst  primelunch.md  pushlunch.rst  splitlunch.rst  usage.md  usage.rst
lunchable/: __init__.py  __main__.py  _cli.py  _version.py  exceptions.py
lunchable/_config/: __init__.py  api_config.py  file_config.py  logging_config.py
lunchable/config/: __init__.py  file_config.py
lunchable/models/: __init__.py  _base.py  _core.py  _descriptions.py  _lunchmoney.py  assets.py  budgets.py  categories.py  crypto.py  plaid_accounts.py  recurring_expenses.py  recurring_items.py  tags.py  transactions.py  user.py
lunchable/plugins/: __init__.py  app.py
lunchmoney/: __init__.py  _version.py  exceptions.py
lunchmoney/config/: __init__.py  api_config.py  file_config.py
lunchmoney/models/: __init__.py  _core.py  _lunchmoney.py  assets.py  budgets.py  categories.py  crypto.py  plaid_accounts.py  recurring_expenses.py  tags.py  transactions.py
lunchmoney/plugins/: __init__.py
lunchmoney/sdk/: __init__.py  _core.py  _lunchmoney.py  assets.py  budgets.py  categories.py  core.py  lunchmoney.py  plaid_accounts.py  recurring_expenses.py  transactions.py
requirements/: dev.txt  prod.txt  requirements-all.py3.10.txt  requirements-all.py3.11.txt  requirements-all.py3.12.txt  requirements-all.py3.13.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-docs.txt  requirements-lint.txt  requirements-prod.txt  requirements-test.py3.10.txt  requirements-test.py3.11.txt  requirements-test.py3.12.txt  requirements-test.py3.8.txt  requirements-test.py3.9.txt  requirements-test.txt
tests/: __init__.py  conftest.py  pytest.ini  test_cli.py
tests/lunchwise/: __init__.py  test_splitwise.py
tests/models/: test_assets.py  test_budgets.py  test_categories.py  test_crypto.py  test_plaid_accounts.py  test_recurring_expenses.py  test_recurring_items.py  test_tags.py  test_transactions.py  test_user.py
tests/plugins/: __init__.py
tests/sdk/: test_assets.py  test_budgets.py  test_categories.py  test_plaid_accounts.py  test_recurring_expenses.py
(+137 files in other folders)
