[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Justin Flannery", email = "juftin@juftin.com"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "click>=8.0.1",
  "pydantic>=2,<3",
  "rich>=10.0.0",
  "httpx"
]
description = "A simple Python SDK around the Lunch Money Developer API"
dynamic = ["version"]
keywords = ["lunchmoney", "python", "pydantic", "api-client"]
license = "MIT"
name = "lunchable"
readme = "README.md"
requires-python = ">=3.8,<4"

[project.optional-dependencies]
all = [
  "pandas",
  "python-dateutil",
  "splitwise>=2.3.0,<3.0.0"
]
apps = [
  "pandas"
]
primelunch = [
  "pandas"
]
splitlunch = [
  "python-dateutil",
  "splitwise>=2.3.0,<3.0.0"
]

[project.scripts]
lunchable = "lunchable._cli:cli"

[project.urls]
Changelog = "https://github.com/juftin/lunchable/releases"
Discussions = "https://github.com/juftin/lunchable/discussions"
Docker = "https://hub.docker.com/r/juftin/lunchable"
Documentation = "https://github.com/juftin/lunchable#readme"
Issues = "https://github.com/juftin/lunchable/issues"
Source = "https://github.com/juftin/lunchable"

[tool.coverage.paths]
lunchable = ["lunchable", "*/lunchable/lunchable"]
tests = ["tests", "*/lunchable/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]

[tool.coverage.run]
branch = true
omit = [
  "lunchable/_version.py"
]
parallel = true
source_pkgs = ["lunchable", "tests"]

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.all]
pip-compile-constraint = ""
template = "test"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.default]
features = ["all"]
pip-compile-constraint = "default"
post-install-commands = [
  "- pre-commit install"
]
type = "pip-compile"

[tool.hatch.envs.default.scripts]
cov = "hatch run test:cov {args:}"
test = "hatch run test:test {args:}"

[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "sphinx-rtd-theme",
  "autodocsumm",
  "myst-parser[linkify]",
  "autoclasstoc",
  "sphinx-copybutton",
  "sphinx_autodoc_defaultargs",
  "sphinxcontrib-apidoc",
  "sphinx-click",
  "sphinx-autodoc-typehints",
  "autodoc_pydantic"
]

[tool.hatch.envs.docs.scripts]
build = [
  "rm -rf docs/_build/ && rm -rf docs/source/api/",
  "cd docs && make html"
]
deploy = ["mkdocs gh-deploy {args:}"]
serve = [
  "build",
  "python -m http.server --bind 0.0.0.0 -d docs/_build/html/"
]

[tool.hatch.envs.gen]
detached = true

[tool.hatch.envs.gen.scripts]
release = [
  "npm install --prefix .github/semantic_release/",
  "npx --prefix .github/semantic_release/ semantic-release {args:}"
]

[tool.hatch.envs.lint]
dependencies = [
  "mypy>=1.6.1",
  "ruff~=0.1.7",
  "pydantic"
]
detached = true
pip-compile-constraint = "default"
type = "pip-compile"

[tool.hatch.envs.lint.scripts]
all = [
  "style",
  "typing"
]
fmt = [
  "ruff format {args:.}",
  "ruff --fix {args:.}",
  "style"
]
precommit = [
  "pre-commit run --all-files"
]
style = [
  "ruff {args:.}",
  "ruff format --check --diff {args:.}"
]
typing = [
  """
  mypy \
    --install-types \
    --ignore-missing-imports \
    --follow-imports=skip \
    --strict-optional \
    --non-interactive \
    {args:lunchable/}
  """
]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-mock",
  "vcrpy~=5.1.0"
]

[tool.hatch.envs.test.env-vars]
LUNCHMONEY_ACCESS_TOKEN = "{env:LUNCHMONEY_ACCESS_TOKEN:LUNCHMONEY_ACCESS_TOKEN_PLACEHOLDER}"
PUSHOVER_USER_KEY = "{env:PUSHOVER_USER_KEY:PUSHOVER_USER_KEY_PLACEHOLDER}"
SENSITIVE_REQUEST_STRINGS = "{env:SENSITIVE_REQUEST_STRINGS:SENSITIVE_REQUEST_STRINGS_PLACEHOLDER}"
SPLITWISE_API_KEY = "{env:SPLITWISE_API_KEY:SPLITWISE_API_KEY_PLACEHOLDER}"
SPLITWISE_CONSUMER_KEY = "{env:SPLITWISE_CONSUMER_KEY:SPLITWISE_CONSUMER_KEY_PLACEHOLDER}"
SPLITWISE_CONSUMER_SECRET = "{env:SPLITWISE_CONSUMER_SECRET:SPLITWISE_CONSUMER_SECRET_PLACEHOLDER}"

[tool.hatch.envs.test.scripts]
cov = [
  "test-cov",
  "cov-report"
]
cov-report = [
  "- coverage combine",
  "coverage report -m"
]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"

[tool.hatch.version]
path = "lunchable/_version.py"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
plugins = [
  "pydantic.mypy"
]
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pytest.*"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
ignore = [
  "E501",  # line too long, handled by black
  "PLR0913",  # Too many arguments to function call
  "PLW2901",  # Outer for loop variable overwritten by inner assignment target
  "RUF001",  # String contains ambiguous unicode character `’`
  "PLR2004",  # Magic value used in comparison
  "RUF012"  # Mutable class attributes should be annotated with `typing.ClassVar`
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "Q",  # flake8-quotes
  "B",  # flake8-bugbear
  "PLE",  # pylint
  "PLR",  # pylint
  "PLW",  # pylint
  "RUF",  # ruff
  "C90"  # mccabe
]

[tool.ruff.per-file-ignores]
"tests/**" = [
  "PLR2004"  # Magic value used in comparison
]
