[metadata]
name = lunch-money
version = attr: lunchmoney._version.__version__
author = Justin Flannery
author_email = juftin@juftin.com
maintainer = Justin Flannery
maintainer_email = juftin@juftin.com
description = A simple Python SDK around the Lunch Money Developer API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juftin/lunch-money
project_urls =
    Bug Tracker = https://github.com/juftin/lunch-money/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include-package-data = True
install_requires =
    requests
    pydantic

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
lunchwise =
    splitwise
dev =
    tox
    pytest
    coverage
    pytest-vcr
    flake8

[options.package_data]
lunch-money = py.typed