[metadata]
name = lunchable
version = attr: lunchable._version.__version__
author = Justin Flannery
author_email = juftin@juftin.com
maintainer = Justin Flannery
maintainer_email = juftin@juftin.com
description = A simple Python SDK around the Lunch Money Developer API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juftin/lunchable
project_urls =
    Documentation = https://lunchable.readthedocs.io/en/latest/
    Discussions = https://github.com/juftin/lunchable/discussions
    Bug Tracker = https://github.com/juftin/lunchable/issues
    Lunch Money API Docs = https://lunchmoney.dev
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include-package-data = True
install_requires =
    requests
    pydantic

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
lunchwise =
    splitwise
dev =
    tox
    pytest
    coverage
    pytest-vcr
    flake8

[options.package_data]
lunchable = py.typed