[metadata]
name = lunchable
version = attr: lunchable._version.__version__
author = Justin Flannery
author_email = juftin@juftin.com
maintainer = Justin Flannery
maintainer_email = juftin@juftin.com
description = A simple Python SDK around the Lunch Money Developer API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juftin/lunchable
project_urls =
    Documentation = https://lunchable.readthedocs.io/en/latest/
    Discussions = https://github.com/juftin/lunchable/discussions
    Bug Tracker = https://github.com/juftin/lunchable/issues
    Lunch Money API Docs = https://lunchmoney.dev
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    requests
    pydantic
    click

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
splitlunch =
    splitwise>=2.3.0
    python-dateutil
dev =
    tox
    pytest
    coverage
    pytest-vcr
    flake8

[options.package_data]
lunchable = py.typed

[options.entry_points]
console_scripts =
    lunchable = lunchable._cli:cli
